# ChangeLog for www-client/otter
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/otter/ChangeLog,v 1.9 2015/02/04 12:37:20 jer Exp $

  04 Feb 2015; Jeroen Roovers <jer@gentoo.org> -otter-0.9.03.ebuild,
  otter-0.9.04.ebuild, otter-9999.ebuild:
  Depend on dev-qt/qtmultimedia:5 by NeverLoved.

  20 Jan 2015; Jeroen Roovers <jer@gentoo.org> otter-9999.ebuild:
  Fix dodoc.

*otter-0.9.04 (20 Jan 2015)

  20 Jan 2015; Jeroen Roovers <jer@gentoo.org> +otter-0.9.04.ebuild:
  Version bump.

  05 Nov 2014; Jeroen Roovers <jer@gentoo.org> otter-0.9.03.ebuild,
  otter-9999.ebuild:
  Remove ineffective sed script.

*otter-0.9.03 (02 Nov 2014)

  02 Nov 2014; Jeroen Roovers <jer@gentoo.org> -otter-0.9.02.ebuild,
  +otter-0.9.03.ebuild:
  Version bump.

  24 Sep 2014; Michael Palimaka <kensington@gentoo.org> otter-0.9.02.ebuild,
  otter-9999.ebuild:
  dev-qt/qtwebkit:5 no longer has a widgets USE flag.

  19 Sep 2014; Jeroen Roovers <jer@gentoo.org> otter-0.9.02.ebuild,
  otter-9999.ebuild:
  Add dev-qt/qtconcurrent:5 dependency (Helmut Jarausch in bug #499576).

*otter-0.9.02 (13 Sep 2014)

  13 Sep 2014; Jeroen Roovers <jer@gentoo.org> +otter-0.9.02.ebuild:
  Version bump.

*otter-9999 (13 Sep 2014)

  13 Sep 2014; Jeroen Roovers <jer@gentoo.org> +otter-9999.ebuild,
  +metadata.xml:
  Initial commit (bug #499576).